# iMOD-Documentation

./: .buildinfo  .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  .typos.toml  3dviewer_user_manual.html  Abbeyfeale.html  CONTRIBUTING.md  Dommel.html  README.md  Tutorial-iMOD-Suite.html  _quarto.yml  about.html  coupler.html  coupler_architecture.html  coupler_index.html  coupler_metamod_config.html  coupler_metamod_example.html  coupler_metamod_technical.html  coupler_release.html  coupler_ribametamod_config.html  coupler_ribametamod_preprocessing.html  coupler_ribametamod_technical.html  coupler_ribamod_config.html  coupler_ribamod_preprocessing.html  coupler_ribamod_technical.html  deltaforge_install.html  further_links.html  genindex.html  index.html  install.html  introduction.html  listings.json  news.html  objects.inv  pixi.toml  practical.html  practical_cookiecutter.html  practical_git_dvc.html  (+39 more)
_sources/: coupler_index.rst.txt  index.rst.txt  python_howdoi.rst.txt  python_index.rst.txt  python_install.rst.txt  qgis_install.rst.txt  qgis_known_issues.rst.txt  qgis_user_manual.rst.txt  viewer_index.rst.txt  viewer_install.rst.txt  viewer_install_index.rst.txt  viewer_install_msi.rst.txt  viewer_known_issues.rst.txt  viewer_user_manual.rst.txt  workflow_index.rst.txt  workflow_wq.rst.txt
docs/: 3dviewer_user_manual.qmd  3dviewer_user_manual.rst  Abbeyfeale.qmd  Dommel.qmd  Tutorial-iMOD-Suite.qmd  _quarto-install.yml  _quarto-manual.yml  _quarto-tutorial.yml  _quarto-website.yml  _quarto.yml  about.qmd  conf.py  coupler.qmd  coupler_index.qmd  (+63 more)
(+29 files in other folders)
