[metadata]
name = iMOD-Documentation
version = 0.1
author = Joeri van Engelen
author_email = joeri.vanengelen@deltares.nl
description = Documentation for the iMOD Suite
url = https://github.com/Deltares/iMOD-Documentation
project_urls =
    Code=https://github.com/Deltares/iMOD-Documentation
    Issues=https://github.com/Deltares/iMOD-Documentation/issues
long_description = file: README.rst
license = GPL-2.0-or-later
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GPL-2.0-or-later
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
keywords = 
    imod
    3d
    modflow

[options]
packages = find:
include_package_data = True
python_requires = >=3.7

[options.extras_require]
docs = 
    pydata-sphinx-theme
    sphinx
    sphinx-gallery